# aoc-2022

./: aoc.cabal
src/: 1.hs  2.hs  3.hs
