cabal-version:      2.4
name:               aoc
version:            0.1.0.0
author:             Donald Lee Qian Siang
maintainer:         dlqs@gmx.com
extra-source-files: CHANGELOG.md

executable 1
    main-is:          1.hs
    build-depends:
        base ^>=4.14.3.0

    hs-source-dirs:   src
    default-language: Haskell2010
