cabal-version:      2.4
name:               aoc
version:            0.1.0.0
author:             Donald Lee Qian Siang
maintainer:         dlqs@gmx.com

executable 1
    main-is:          1.hs
    build-depends:
        base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable 2
    main-is:          2.hs
    build-depends:
        base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable 3
    main-is:          3.hs
    build-depends:
        base ^>=4.14.3.0,
        split
    hs-source-dirs:   src
    default-language: Haskell2010
